[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
precomp-git = ["dep:syntastica-parsers-git"]
precomp-crates-io = ["dep:syntastica-parsers"]

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
crates_io_api = "0.8.1"
fancy-regex = "0.11.0"
glob = "0.3.1"
lua-pattern = { version = "0.1.2", features = ["to-regex"] }
once_cell = "1.17.1"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "blocking"] }
rsexpr = { version = "0.2.3", path = "../rsexpr", features = ["comments"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.100" }
syntastica-core = { version = "0.3.0", path = "../syntastica-core" }
toml = "0.7.4"

syntastica-parsers = { version = "0.3.0", path = "../syntastica-parsers", default-features = false, features = ["all"], optional = true }
syntastica-parsers-git = { version = "0.3.0", path = "../syntastica-parsers-git", default-features = false, features = ["all"], optional = true }

[package.metadata.release]
shared-version = false
release = false
