[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntastica-core = { workspace = true, features = ["runtime-c"] }

anyhow = "1.0.71"
crates_io_api = "0.8.1"
fancy-regex = "0.11.0"
glob = "0.3.1"
lazy-regex = "3.0.1"
lua-pattern = { version = "0.1.2", features = ["to-regex"] }
once_cell.workspace = true
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "blocking"] }
rsexpr = { version = "0.2.5", features = ["comments"] }
semver = "1.0.18"
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0.100" }
toml.workspace = true

[package.metadata.release]
shared-version = false
release = false
