[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
syntastica-core = { workspace = true, features = ["runtime-c"] }
syntastica-query-preprocessor.workspace = true
syntastica-themes.workspace = true

anyhow = "1.0.95"
crates_io_api = "0.11.0"
fancy-regex = "0.14.0"
glob = "0.3.2"
heck = "0.5.0"
lazy-regex = "3.4.1"
once_cell.workspace = true
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "blocking"] }
rsexpr = { version = "0.2.5", features = ["comments"] }
semver = "1.0.25"
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0.138" }
tft = { workspace = true, features = ["serde"] }
toml.workspace = true

[package.metadata.release]
shared-version = false
release = false
