[workspace]

[package]
name = "wasm-pack-with-npm-pkg"
version = "0.1.0"
authors = ["RubixDev <silas.groh@t-online.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.63"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
