[workspace]

[package]
name = "syntastica-dioxus-demo"
version = "0.1.0"
authors = ["RubixDev <silas.groh@t-online.de>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
syntastica = { version = "0.4.1", path = "../../..", default-features = false, features = ["runtime-c2rust"] }
syntastica-parsers-git = { version = "0.4.1", path = "../../../syntastica-parsers-git", default-features = false, features = ["runtime-c2rust", "rust"] }
syntastica-themes = { version = "0.4.1", path = "../../../syntastica-themes", default-features = false, features = ["runtime-c2rust"] }

dioxus = "0.4.0"
dioxus-web = "0.4.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
