[workspace]

[package]
name = "syntastica-dioxus-demo"
version = "0.1.0"
authors = ["RubixDev <silas.groh@t-online.de>"]
edition = "2021"
license = "GPL-3.0-only"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
syntastica = { version = "0.5.1", path = "../../..", default-features = false, features = ["runtime-c2rust"] }
syntastica-parsers-git = { version = "0.5.1", path = "../../../syntastica-parsers-git", default-features = false, features = ["runtime-c2rust", "rust"] }
syntastica-themes = { version = "0.5.1", path = "../../../syntastica-themes", default-features = false, features = ["runtime-c2rust"] }

dioxus = "0.6.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
