[workspace]

[package]
name = "syntastica-wasm-pack"
version = "0.1.0"
authors = ["RubixDev <silas.groh@t-online.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
syntastica = { version = "0.5.1", path = "../../..", default-features = false, features = ["runtime-c2rust"] }
syntastica-parsers-git = { version = "0.5.1", path = "../../../syntastica-parsers-git", default-features = false, features = ["runtime-c2rust", "rust"] }
syntastica-themes = { version = "0.5.1", path = "../../../syntastica-themes", default-features = false, features = ["runtime-c2rust"] }

js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
